--- a/src/app/bill-list/bill-list.component.scss
+++ b/src/app/bill-list/bill-list.component.scss
@@ -4,6 +4,7 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
+      margin: 0px 15px;
 
       .filters-wrapper{
         margin: 20px 0px;
@@ -13,5 +14,9 @@
         }
       }
     }
+  }
+  .bill-list{
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
   }
 }
