[BillList] add logic for monthly budget

--- a/src/app/bill-list/bill-list.component.scss
+++ b/src/app/bill-list/bill-list.component.scss
@@ -1,13 +1,19 @@
 .bill-list-container{
   .main-content{
     .header-wrapper{
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
       margin: 0px 15px;
 
+      .bill-details{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+      }
+      
       .filters-wrapper{
         margin: 20px 0px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
         .filter-option{
           margin-right: 20px;
           width: 200px;
@@ -18,5 +24,11 @@
   .bill-list{
     display: grid;
     grid-template-columns: 25% 25% 25% 25%;
+  }
+  .empty-state-wrapper{
+    height: calc(100vh - 200px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 }
