--- a/src/common/bill/bill.component.scss
+++ b/src/common/bill/bill.component.scss
@@ -5,6 +5,7 @@
   padding: 5px 10px;
 
   &:hover{
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
     .action-wrapper{
       display: block;
     }
@@ -45,4 +46,8 @@
       }
     }
   }
+}
+
+.highlighted-card{
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2) !important;
 }
