--- a/src/app/bill-list/bill-list.component.scss
+++ b/src/app/bill-list/bill-list.component.scss
@@ -1,3 +1,5 @@
+@import '../../styles/colors.scss';
+
 .bill-list-container{
   .main-content{
     .header-wrapper{
@@ -14,6 +16,11 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        .MuiButtonBase-root{
+          padding: 15px 50px;
+          background: $primary-color;
+          color: $contrast-color;
+        }
         .filter-option{
           margin-right: 20px;
           width: 200px;
